Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4883

Argument mismatch of the Thread::start call in EventProcessor::start

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • Core
    • None

    Description

      EventProcessor::start() calls Thread::start(), which takes 5 arguments:

      1. name
      2. stacksize
      3. f(function pointer to be executed by the thread)
      4. a(argument for f)
      5. stack(pointer to stack used by the thread)

      However the call to Thread::start() takes the pointer to stack as 4th argument.

      Attachments

        Activity

          People

            psudaemon Phil Sorber
            mgosui Masato Gosui
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 1h 50m
                1h 50m