TS-4883: Fix Thread::start call in EventProcessor::start